[package]
authors = ["David Wallace Croft <david@croftsoft.com>"]
description = "Re-export of com-croftsoft-lib-* crates"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "com-croftsoft-lib"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/com-croftsoft-lib"
rust-version = "1.73"
version = "0.1.2-SNAPSHOT"

[dependencies]
com-croftsoft-lib-animation = "0.0.8"
com-croftsoft-lib-role = "0.5.1"
com-croftsoft-lib-string = "0.1.0"
